Fixed CTA button in dropdown-mode being too small

--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@
 @media screen and (max-width: 992px) {
     #btn-cta-override {
         padding: 5px 20px !important;
-        margin-left: 65% !important;
+        margin-left: 60% !important;
     }
 
     .nav-item {
